[fix] scrollbar 수정

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,29 +119,26 @@ body {
   }
 }
 
-/* 스크롤바 전체 크기 */
-::-webkit-scrollbar {
-  width: 12px;
-  height: 0px;
-  animation: 300ms ease-in-out;
+body.scrollable {
+  overflow-y: scroll !important; /* 항상 스크롤바가 있을 수 있도록 설정 */
+  transition: all 0.3s ease; /* 부드러운 전환 효과 */
 }
 
-/* 스크롤바 배경 (트랙) */
-::-webkit-scrollbar-track {
-  background-color: #f1f1f1; /* 배경 색 */
-  animation: 300ms ease-in-out;
+body.scrollable::-webkit-scrollbar {
+  width: 8px;
 }
 
-/* 스크롤바 슬라이더 */
-::-webkit-scrollbar-thumb {
-  background-color: #ccc; /* 슬라이더 색 */
-  border: 0px solid #f1f1f1; /* 슬라이더와 배경 사이의 여백 */
-  animation: 300ms ease-in-out;
+body.scrollable::-webkit-scrollbar-track {
+  background-color: transparent !important;
 }
 
-/* 슬라이더에 마우스를 올렸을 때 */
-::-webkit-scrollbar-thumb:hover {
-  background-color: #b8ceff; /* 마우스 오버 시 색상 */
-  animation: 300ms ease-in-out;
-  cursor: pointer;
+body.scrollable::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.3) !important; /* thumb 색상 */
+  border-radius: 10px;
+  opacity: 0 !important; /* 기본 상태에서 thumb는 안 보이게 */
+  transition: opacity 0.3s ease;
+}
+
+body.scrollable:hover::-webkit-scrollbar-thumb {
+  opacity: 1 !important; /* hover 시에만 thumb가 보이게 */
 }
